fixed issue with disapearing footer on smaller screens

--- a/assets/sass/general.scss
+++ b/assets/sass/general.scss
@@ -9,7 +9,7 @@ body{
    flex-direction:column;
    scrollbar-width: none;
    height:100vh;
-   overflow:hidden;
+ 
    p{
        color:analogous_blue.$color_seven;
    }
